# nlmagick

./: .gitignore  .gitmodules  CMakeLists.txt  README
include/: nlopt-util.h  nlopt.h
include/nlmagick/: nlopt.hpp
samples/: CMakeLists.txt  affine_frame2frame.cpp  opencv_helpers.hpp  template_image_rigid.cpp  template_image_zoom_rigid.cpp  template_nlopt_rigid.cpp  webcam_chessboard_rigid.cpp
src/: cobyla.c  deprecated.c  general.c  global.cpp  global.h  hybrid.c  local_search.cpp  mma.c  mt19937ar.c  newuoa.c  nlopt.cpp  nlopt.h  optimize.c  options.c  sobolseq.cpp  stogo_local.cpp  timer.c
testdata/: run_rigid_template_image_test.sh  run_rigid_template_image_test01.sh  run_rigid_template_image_test02.sh  run_rigid_template_image_test03.sh  run_rigid_template_image_test04.sh  webcam320x240.yml
unittest/: CMakeLists.txt  camera_droidx_640x480.yml  nlmagick_test_fmincon.cpp
